add forgoten video

--- a/style.css
+++ b/style.css
@@ -90,6 +90,12 @@ By Dylan Araps */
 	padding-top: 10px;
 }
 
+#tes3mp .center
+{
+	padding-left: 195px;
+	padding-top: 180px;
+}
+
 #tes3mp a
 {
 	color: #2d2d2d;
