--- a/style.css
+++ b/style.css
@@ -4,9 +4,7 @@ By Dylan Araps */
 {
 	display: block;
 	margin: 0 auto;
-	
-	/*duck tape, ooo, ooo!*/
-	padding-left: 20%;	
+	width: 70%;
 }
 		
 #menu li
@@ -31,125 +29,54 @@ By Dylan Araps */
 {
 	color: #D64937;
 }
-	
-#main
+
+/***content container***/
+@media screen and (max-width: 1080px){#content{width: 50%;}} /*fix for 1920x1080 screens*/
+
+#content
 {
-	width: 80%;
+	width: 70%;
 	margin: 0 auto;
-	padding-top: 50px; 
+	padding-top: 10px; 
 	background: #fff;
 	padding: 10px;
 }
-		
-#main .header
-{
-	display: block;
-	margin: 0 auto;
-	text-align: center;
-}
-		
-#main h1.header
-{
-	color: #D64937;
-	width: 500px;
-}
-		
-#main .header.small
-{
-	padding-top: 5px;
-	text-align: center;
-	font-size: 12px;
-	color: #C4C4C4;
-}
+#content a{color: #777777; text-decoration: none;}
 
-#home .other_content
+#content .ava_img{width: 200px;}
+
+@media screen and (max-width: 800px){#headline{padding-top: 5%;}} /*fix for 800x600 screens*/
+
+#header{font-size: 2em; color: #D64937; padding-bottom: 10px;}
+#header .small{font-size: 0.4em; color: #C4C4C4;}
+
+p
 {
-	width: 61%;
-	padding-top: 250px;
-	padding-left: 190px;
+	font-family: sans-serif, dejuvu-sans-book;
 	text-align: justify;
+	line-height: 1.5em;
 }
 
-#home .small_img
-{
-	width: 300px;
-	padding-left: 330px;
-	padding-top: 10px;	
-}
+.indent{ text-indent: 20px; }
 
-#home .ava_img
-{
-	width: 200px;
-}
+.quote{ border-left: 2px solid #D64937; padding-left: 8px; }
 
-#tes3mp .small_img
-{
-	width: 200px;
-	height: 400px;
-	margin-left: -20px;
-	padding-top: 10px;
-}
-
-#tes3mp .center
-{
-	padding-left: 195px;
-	padding-top: 180px;
-}
-
-#tes3mp a
-{
-	color: #2d2d2d;
-}
-
-#tes3mp a:hover 
-{
-	color: #D64937;
-}
-
-.left
-{
-	float: left;
-	margin-left: 20%;
-}
-
-.right
-{
-	position: absolute;
-	float: right; 
-	margin-left: 47%;
-}
-		
-.command_line
-{
-	background-color: black;
-	color: #00D000;
-	padding: 5px;
-	margin-left: 5px;
-	margin-top: 10px;
-}
-
-.spoiler
-{
-	padding-left: 2px;
-	padding-right: 2px;
-	background-color: black;
-	color: black;
-}
-
-.spoiler:hover
-{
-	color: white;
-	cursor: pointer;
-}
-
+/***footer***/
 #footer 
 {
-   background: #D64937;
-   color: #fff;
-	margin-left: 25%;
-	width: 50%;
-	padding: 2px;
+	background: #D64937; color: #fff;
 	text-align: center;
+	width: 70%;
+	margin-left: 15%;
 }
-
 #footer a{color: #333; text-decoration: none;}
+#footer a:hover{color: #fff;}
+
+/*****************************/
+.center{text-align: center;}
+/*elastic images -- makes images resize, when screen small*/
+.center img {max-width: 100%; height: auto; width: auto\9; /* ie8 */}
+.center iframe {max-width: 100%; padding-top: 100px; padding-bottom: 200px;}
+.resize{width: 50%; height: auto;}
+.left{width: 80%;}
+table ul{list-style: none; padding-left: 0; margin-top: -10px; line-height: 1.5em;}
