--- a/style.css
+++ b/style.css
@@ -25,10 +25,7 @@ By Dylan Araps */
 }
 		
 /*volk's css*/
-#menu a:hover 
-{
-	color: #D64937;
-}
+#menu a:hover { color: #D64937; }
 
 /***content container***/
 @media screen and (max-width: 1080px){#content{width: 50%;}} /*fix for 1920x1080 screens*/
@@ -41,7 +38,8 @@ By Dylan Araps */
 	background: #fff;
 	padding: 10px;
 }
-#content a{color: #777777; text-decoration: none;}
+#content a{color: #777; text-decoration: none; transition: .2s;}
+#content a:hover{color: #D64937; }
 
 #content .ava_img{width: 200px;}
 
@@ -49,6 +47,7 @@ By Dylan Araps */
 
 #header{font-size: 2em; color: #D64937; padding-bottom: 10px;}
 #header .small{font-size: 0.4em; color: #C4C4C4;}
+#header a{color: #D64937;}
 
 p
 {
