--- a/style.css
+++ b/style.css
@@ -43,21 +43,20 @@ By Dylan Araps */
 
 #content .ava_img{width: 200px;}
 
-@media screen and (max-width: 800px){#headline{padding-top: 5%;}} /*fix for 800x600 screens*/
+@media screen and (max-width: 800px){#header{padding-top: 5%;}} /*fix for 800x600 screens*/
 
-#header{font-size: 2em; color: #D64937; padding-bottom: 10px;}
-#header .small{font-size: 0.4em; color: #C4C4C4;}
+#header{font-family: sans, dejuvu-sans-book; font-size: 2em; color: #D64937; padding-bottom: 10px;}
+#header .small{font-family: sans, dejuvu-sans-book; font-size: 0.4em; color: #C4C4C4;}
 #header a{color: #D64937;}
 
 p
 {
-	font-family: sans-serif, dejuvu-sans-book;
+	font-family: sans, dejuvu-sans-book;
 	text-align: justify;
 	line-height: 1.5em;
 }
 
 .indent{ text-indent: 20px; }
-
 .quote{ border-left: 2px solid #D64937; padding-left: 8px; }
 
 /***footer***/
@@ -68,6 +67,7 @@ p
 	width: 70%;
 	margin-left: 15%;
 }
+
 #footer a{color: #333; text-decoration: none;}
 #footer a:hover{color: #fff;}
 
