--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@ By Dylan Araps */
 {
 	display: block;
 	margin: 0 auto;
-	width: 70%;
+	width: 77%;
 }
 		
 #menu li
@@ -79,3 +79,5 @@ p
 .resize{width: 50%; height: auto;}
 .left{width: 80%;}
 table ul{list-style: none; padding-left: 0; margin-top: -10px; line-height: 1.5em;}
+.spoiler {background: #B1B1B1; color: #B1B1B1; padding-left: 5px; padding-right: 5px;}
+.spoiler:hover {color: #000;}
